[package]
name = "fault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
proxy-wasm = "0.2.0"
rand = "0.8.0"
getrandom = { version = "0.2", features = ["js"] }
