[package]
name = "rpc_bench_volo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
volo-build = "0.2.1"

[dependencies]
structopt = "0.3.23"
futures = "0.3"
smol = "1.2.5"
minstant = "0.1.1"
hdrhistogram = "7.5.0"
volo = "0.2.1"
volo-grpc = "0.2.1"
tokio = "1.22.0"
prost = "0.11.2"
async-trait = "0.1.58"


[[bin]]
name = "rpc_bench_client"
path = "src/client.rs"

[[bin]]
name = "rpc_bench_server"
path = "src/server.rs"
